# BaseUnits

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  attributes.h  derivedUnits.h  macros.h  printUnits.h  quantity.h  units.h
test/: CMakeLists.txt  assertCompatibleUnits.cpp  test_units.cpp  test_units_right_answers.txt
test/reference/: CMakeLists.txt
